# visualization-mcp-server

./: README.md  __init__.py  pyproject.toml  visualization_server.py
src/visualization_mcp_server/: __init__.py  server.py
